--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TaskAppAndroid</string>
     <string name="title">Lista de tareas</string>
     <string name="categories">Categories</string>
+    <string name="task">Tareas</string>
 </resources>
